GS-9134 Removed the height for  the RYH word bubble and fixed the overflow

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -969,9 +969,12 @@ body.ie6 .clearfix {
     padding:15px;
     background:#ebebeb;
 }
-
+.ryh-topsection {
+    overflow: hidden;
+    padding: 0 0 24px;
+}
 .ryh-title{
-    width:292px; height:60px;
+    width:292px;
     padding:15px;
     background:white;
     position:relative;
